# EmpiricalZeroKnowledge

./: README.md  build.sh  deptree.sh  develop.sh
common/bch/: configure.ac
common/carena/: Makefile.am  carena.am  configure.ac
common/carena/src/: carena.c
common/carena/test/: Makefile.am  test.c  testsend.c  testsendcli.c  testsendsrv.c  threeway.c
common/ds/: Makefile.am  configure.ac  ds.am
common/ds/src/: blockingqueue.c  hashmap.c  stats.c
common/ds/test/: Makefile.am
common/encoding/: configure.ac
common/encoding/headers/encoding/: hex.h
common/encoding/src/encoding/: der.c  int.c
common/utils/: configure.ac  utils.am
empiricalZK/ikos/: configure.ac
empiricalZK/ikos/include/: Makefile.am
empiricalZK/ikos/src/: Makefile.am  ikos.c.c
empiricalZK/ikos/test/: Makefile.am
empiricalZK/rtz14/: README  configure.ac
empiricalZK/rtz14/include/: Makefile.am  circuit_analyser.h  circuitparser.h  commitment.h  emiter.h  emitter.h  linear_proof.h  rtz14.h
empiricalZK/rtz14/src/: Makefile.am  circuit_analyser.c  circuitparser.c  circuittool.c  commitment.c  emiter.c  emitter.c  linear_proof.c  prover.c  rtz14.c  sha512.s
empiricalZK/rtz14/test/: AES  AND  Makefile.am  XOR  generate_aes_epilog.sh  test.h  test_circuitparser.c  test_emitter.c  test_funtokenizer.c  test_hashcommit.c  test_inputgatevisitor.c  test_linear_proof.c  test_outputgatevisitor.c  test_pocvisitor.c  test_rtz14.c  testutils.c  testutils.h
platform/datetime/: configure.ac
platform/datetime/include/: datetime.h
platform/datetime/linux/: linux.mak
platform/datetime/src/: datetime.c
platform/osal/: configure.ac
platform/osal/include/: Makefile.am  common.h  coov3.h  osal.h  testcase.h
platform/osal/posix_src/: Makefile.am  coov3.c  osal.c
platform/osal/src/: Makefile.am  rnd.c  singlelinkedlist.c
platform/osal/test/: Makefile.am  printtest.c  testcase.c  testoe.c  testtest.c  utf8test.c
platform/random/: README  configure.ac
platform/random/include/: Makefile.am
platform/random/src/: Makefile.am  random.c
platform/random/test/: Makefile.am
